spacing fix header

--- a/index.css
+++ b/index.css
@@ -52,9 +52,10 @@ body {
   font-size: 70px;
   font-family: "Big Caslon", sans-serif;
   color: white;
-  border-left: 0;
+  border-left: 0px;
   padding-left: 45px;
   font-weight: bold;
+  margin-left: 50px;
 }
 .container {
   padding: 35px 0 0;
